# VeryPowerfulAgents

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  publish.sh  pyproject.toml  setup.py  test.sh
.circleci/: config.yml
agents/: __init__.py  agent.py  message.py  powerful_agent.py  storage.py  utils.py  very_powerful_agent.py
agents/defs/: __init__.py  defs.py  module.py
agents/messaging/: __init__.py  messages.py  pool.py
agents/messaging/connections/: __init__.py  internal.py  websocket.py
agents/messaging/defs/: defs.py
agents/messaging/pools/: __init__.py  pollers.py  pools.py
agents/mixins/: __init__.py  authentication.py  daemon.py  notifications.py  router_client.py  webserver.py
agents/utils/: utils.py
apps/chatserver/: chatserver.py  utils.py
docs/: agents_connections.drawio  index.md  installation.md  quickstart.md
docs/agents/: agent.md  powerful-agent.md  very-powerful-agent.md
docs/examples/: curve-auth.md  echo-server.md  notifications.md  router-client.md  simple-agent.md  zap-curve-auth.md
examples/: asyncio_interop.py  curve_auth.py  daemon.py  echo_server.py  http_server.py  notifications.py  rest_api.py  router_client.py  simple_agent.py  webchat.py  websocket_echo_server.py  zap_auth.py  zap_curve_auth.py
tests/: .coveragerc  conftest.py  pytest.ini  test_agent.py  test_basic.py  test_daemon.py  test_module.py  test_module_websocket.py  test_networking.py
tests/messaging/: test_messaging_connection.py  test_messaging_message.py  test_messaging_poller.py  test_messaging_pool.py
(+5 files in other folders)
